--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <div id="app"></div>
+  <div class="fill">
+    <div id="app"></div>
+  </div>
   <script src="renderer.js"></script>
 </body>
 </html>
