--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <div class="fill">
-    <div id="app"></div>
+  <div class="content" id="content">
+    <div class="fill" id="app"></div>
   </div>
   <script src="renderer.js"></script>
 </body>
